[package]
edition = "2021"
name = "pulsar_engine"
description = "A modern high-performance game engine written in Rust"
publish = false
version = "0.2.20"

[[bin]]
name = "pulsar_engine"
path = "src/main.rs"
[dependencies]
# horizon.workspace = true
anyhow.workspace = true
gpui-ce.workspace = true
ui = { workspace = true, features = ["tree-sitter-languages"] }
winit.workspace = true
thiserror = { workspace = true }
image = { workspace = true }
wgpu.workspace = true
rfd = { workspace = true }
file-association-manager = { git = "https://github.com/Far-Beyond-Pulsar/file-association-manager", rev = "6ca80ae7ab73e050bdb40f7f08d538bb8330c2d3" }

# Engine crates
engine_backend.workspace = true
engine_state.workspace = true
# Profiling - instrumentation-based
profiling = { workspace = true }

# UI crates - commented out to avoid circular dependency during build
# The UI crates depend on engine, so we can't have engine depend on them
# Instead, engine will link against them at runtime
ui_core.workspace = true
ui_common.workspace = true
ui_entry.workspace = true
# ui_daw_editor.workspace = true
ui_settings.workspace = true
ui_loading_screen.workspace = true
ui_about.workspace = true
ui_documentation.workspace = true
ui_log_viewer.workspace = true
ui_git_manager.workspace = true
ui_fab_search.workspace = true
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rust-embed = { workspace = true, features = ["interpolate-folder-path", "include-exclude"] }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
directories = { workspace = true }
toml = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
sysuri.workspace = true
urlencoding.workspace = true
dotenv = "0.15"
window_manager.workspace = true
pulsar_std = { workspace = true }
tracing-appender = "0.2.4"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = { workspace = true }

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

[package.metadata.bundle]
name = "Pulsar"
identifier = "dev.pulsar.engine"
icon = ["assets/images/logo_sqrkl_mac.icns"]
copyright = "Copyright © 2025-2026 Tristan J. Poland"
category = "Developer Tool"
short_description = "A modern high-performance game engine"
long_description = "Pulsar is a modern, high-performance game and simulation engine written in Rust."

[package.metadata.bundle.macos]
minimum_system_version = "12.0"
high_resolution_capable = true
