[package]
edition = "2021"
name = "engine_backend"
description = "A modern high-performance game engine backend written in Rust"
publish = false
version = "0.1.34"

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true

[dependencies]
PebbleVault = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
rapier3d.workspace = true
tracing = "0.1"
thiserror = "2.0"
dashmap = "6.1.0"

# Profiling - instrumentation-based
profiling = { path = "../profiling" }

# UI dependencies needed for services
gpui.workspace = true
ui.workspace = true
lsp-types.workspace = true
ropey.workspace = true
flume = "0.11"

# Helio rendering (blade-graphics alternative)
helio-core.workspace = true
helio-render.workspace = true
helio-features.workspace = true
helio-feature-base-geometry.workspace = true
helio-feature-lighting.workspace = true
helio-feature-materials.workspace = true
helio-feature-procedural-shadows.workspace = true
helio-feature-bloom.workspace = true
helio-feature-billboards.workspace = true
blade-graphics.workspace = true
glam.workspace = true

wgpu = "27.0.0"
wgpu-hal = "27.0.0"
crossbeam-channel = "0.5"
futures = "0.3"
parking_lot = "0.12"
anyhow = "1.0"
# horizon = { git = "https://github.com/Far-Beyond-Dev/Horizon", rev = "b11774f548d50e183b9a452369cda6877fc0abe4" }
serde_json = "1.0"

# Networking dependencies
async-tungstenite = { version = "0.23", features = ["tokio-runtime"] }
git2 = "0.19"
sha2 = "0.10"
walkdir = "2.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"
