[package]
edition = "2021"
name = "engine_backend"
description = "A modern high-performance game engine backend written in Rust"
publish = false
version = "0.1.34"

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true

[dependencies]
ui_gen_macros = { path = "../ui_gen_macros" }
PebbleVault = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
rapier3d.workspace = true
tracing = "0.1"
thiserror = "2.0"
dashmap = "6.1.0"

# Profiling - instrumentation-based
profiling = { path = "../profiling" }

# UI dependencies needed for services
gpui-ce.workspace = true
ui.workspace = true
pulsar_diagnostics.workspace = true
pulsar_lsp.workspace = true
lsp-types.workspace = true
ropey.workspace = true
flume = "0.11"

# Helio rendering (wgpu-based)
helio.workspace = true
helio-asset-compat = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "6320b6cec9419097c4500c86574499492a0a94d0" }
glam.workspace = true
bytemuck = "1.14"

wgpu.workspace = true
crossbeam-channel = "0.5"
futures = "0.3"
parking_lot = "0.12"
anyhow = "1.0"
# horizon = { git = "https://github.com/Far-Beyond-Dev/Horizon", rev = "b11774f548d50e183b9a452369cda6877fc0abe4" }
serde_json = "1.0"

# Networking dependencies
async-tungstenite = { version = "0.23", features = ["tokio-runtime"] }
git2 = "0.19"
sha2 = "0.10"
walkdir = "2.4"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"
