[package]
name = "engine_fs"
version = "0.1.0"
edition = "2021"

[dependencies]
ui_types_common = { workspace = true }
type_db = { workspace = true }
plugin_manager = { path = "../plugin_manager" }
plugin_editor_api = { path = "../plugin_editor_api" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
notify = "8.2.0"
walkdir = "2.5"
profiling = { path = "../profiling" }
parking_lot = "0.12"
urlencoding = { workspace = true }
ureq = { version = "2.10", features = ["json"] }
base64 = "0.22"
tool_registry = { git = "https://github.com/Far-Beyond-Pulsar/ToolbeltRS", rev = "116b9028bad6b9467073de2534be60ef4df9b279" }
tool_registry_macros = { git = "https://github.com/Far-Beyond-Pulsar/ToolbeltRS", rev = "116b9028bad6b9467073de2534be60ef4df9b279" }

[dev-dependencies]
tempfile = "3.8"
