[package]
name = "engine_state"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Type database
type_db.workspace = true
gpui-ce.workspace = true
window_manager.workspace = true

# Thread-safe data structures
dashmap = "6.1.0"
parking_lot = "0.12"

# Error handling
anyhow = "1.0"

# Logging
tracing.workspace = true

# Discord Rich Presence
# Use the local cross-platform version until it's pushed to the repo
rust-discord-activity = { git = "https://github.com/Far-Beyond-Pulsar/Discord-RPC-RS", rev = "2f07922277bc3632fd124e46d28008fc542367fc"}

# Settings system
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5"

# Shared window types
ui_types_common = { path = "../../ui-crates/ui_types_common" }
