[package]
name = "pulsar-host"
version = "0.1.0"
edition = "2021"
description = "Dedicated multi-user project server for Pulsar Engine game studios"
authors = []
license = "MIT OR Apache-2.0"

[[bin]]
name = "pulsar-host"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# HTTP server
axum = { workspace = true, features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { workspace = true, features = ["cors", "trace"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Logging / tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

# CLI / config
clap = { workspace = true, features = ["derive", "env"] }

# IDs & time
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
dashmap = { workspace = true }

# File I/O
tokio-util = { version = "0.7", features = ["io"] }

# Password / token hashing  (for optional auth token storage)
sha2 = { workspace = true }
hex = "0.4"
base64 = { workspace = true }
