[package]
name = "pulsar-multiedit"
version = "0.1.0"
edition = "2021"
description = "Pulsar MultiEdit - rendezvous, relay, matchmaker in one binary"

[[bin]]
name = "pulsar-multiedit"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full", "tracing"] }
futures-util = "0.3"

# Web server
axum = { workspace = true, features = ["ws", "macros", "http2"] }
tower-http = { workspace = true, features = ["trace", "cors", "timeout"] }

# QUIC transport
quinn = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.1"
rcgen = "0.13"
# Commented out post-quantum until aws-lc-sys Windows support improves
# rustls-post-quantum = "0.2"

# Networking
socket2 = "0.5"


ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = { workspace = true }

# JWT
jsonwebtoken = "9.2"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
bincode = "1.3"

# Logging & Telemetry
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt", "ansi"] }
colored = "2.1"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }

# Metrics
prometheus = "0.13"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }

# No AWS - using local storage only

# Config & CLI
clap = { workspace = true, features = ["derive", "env"] }
config = "0.14"
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
bytes = "1.7"
chrono = { workspace = true, features = ["serde"] }
once_cell = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
criterion = { version = "=0.5.1", features = ["async_tokio"] }
proptest = "=1.11.0"
mockall = "=0.13.1"
tempfile = { workspace = true }
reqwest = { version = "=0.13.4", features = ["json"] }

# [[bench]]
# name = "relay_throughput"
# harness = false

# [[bench]]
# name = "crdt_convergence"
# harness = false
