[package]
edition = "2021"
name = "net"
description = "high performance low level networking library for the Pulsar game engine"
publish = false
version = "0.1.34"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
async-trait = "0.1.89"
futures = "0.3.31"
futures-util = "0.3.31"

# QUIC transport
quinn = "0.11.9"
rcgen = "0.14.6"

# Networking
socket2 = "0.6.1"

# Crypto
snow = "0.10.0"
x25519-dalek = "2.0.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
chacha20poly1305 = "0.10.1"
rand = "0.9.2"
rand_core = { version = "0.9.3", features = ["std"] }
sha2 = "0.10.9"
hmac = "0.12.1"

# JWT
jsonwebtoken = "10.2.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
bincode = "3.0.0"
prost = "0.14.1"
prost-types = "0.14.1"

# Logging & Telemetry
tracing = "0.1.44"


# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Utilities
uuid = { version = "1.19.0", features = ["v4", "serde"] }
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.21.3"
parking_lot = "0.12.5"
dashmap = "6.1.0"