[package]
name = "plugin_ai_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde_json = "1.0"

[dev-dependencies]
plugin_editor_api = { path = "../plugin_editor_api" }
serde = { version = "1.0", features = ["derive"] }
