[package]
name = "plugin_editor_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"

# UI dependencies (for Panel trait integration)
gpui = { workspace = true }
ui = { workspace = true }

[build-dependencies]
tracing = "0.1.41"

[dev-dependencies]
tracing = "0.1.41"

[features]
default = []
# Feature flag to indicate this is being built as a plugin
plugin = []

[lib]
crate-type = ["lib", "cdylib"]
