[package]
name = "plugin_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
plugin_editor_api = { path = "../plugin_editor_api" }

# Dynamic library loading
libloading = "0.8"
serde_json = "1.0"
tracing = { workspace = true }

# UI dependencies
gpui = { workspace = true }
ui = { workspace = true }

# File system operations
walkdir = "2.4"

[dev-dependencies]
env_logger = "0.11"
