[package]
name = "plugin_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
plugin_editor_api = { path = "../plugin_editor_api" }

# WASM runtime
wasmtime = { workspace = true, features = ["component-model", "async"] }
wasmtime-wasi = { workspace = true }
wasmparser = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
async-trait = "0.1"

# Utilities
tracing = { workspace = true }
once_cell = "1.19"
walkdir = "2.4"
serde_json = { workspace = true }

# UI dependencies
gpui = { workspace = true }
ui = { workspace = true }

[build-dependencies]
anyhow = "1.0"

