[package]
name = "pulsar-multiplayer-core"
version = "0.1.0"
edition = "2021"
description = "Shared protocol types, session model, and transport abstractions for multiplayer collaboration"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt"] }
