[package]
name = "pulsar_bp_executor"
version = "0.1.0"
edition = "2021"
description = "Native dylib-backed Blueprint executor — zero-enum, direct fn-ptr dispatch"

[dependencies]
libloading = "0.8"
pbgc       = { git = "https://github.com/Far-Beyond-Pulsar/PBGC", rev = "4ef8298edc447d88f6f84cece340fe508f17a906" }

[dev-dependencies]
graphy           = { git = "https://github.com/Far-Beyond-Pulsar/Graphy", rev = "74a993fe51efc00ac5e208af74a3df79f2c0ba47" }
pulsar_std_bundle = { path = "../pulsar_std_bundle" }
serde_json       = "1.0"
