[package]
name = "pulsar_bp_executor"
version = "0.1.0"
edition = "2021"
description = "Native dylib-backed Blueprint executor — zero-enum, direct fn-ptr dispatch"

[dependencies]
libloading = { workspace = true }
pbgc = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
graphy           = { workspace = true }
pulsar_std_bundle = { workspace = true }
serde_json       = { workspace = true }
