[package]
name = "pulsar_diagnostics"
edition = "2021"
version = "0.1.0"
description = "Shared diagnostic types for the Pulsar engine"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
