[package]
name = "pulsar_docs"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-embed = { version = "6", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit"] }
quote = "1"
walkdir = "2"
tracing = "0.1.41"

[build-dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit"] }
quote = "1"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
toml = "0.9.8"

[lints]
workspace = true
