[package]
name = "pulsar_game"
version = "0.1.0"
edition = "2021"
description = "Pulsar game runtime: archetypal ECS, tick loop, async task pool, and actor lifecycle"

[dependencies]
smol        = { workspace = true }
profiling   = { workspace = true }
tracing     = { workspace = true }

# Fast hasher — avoids DoS-resistant hashing overhead for internal tables
ahash       = "0.8"
# Stable, fast type-name/id utilities
once_cell   = "1"

[lints]
workspace = true
