[package]
name = "pulsar_game"
version = "0.1.0"
edition = "2021"
description = "Pulsar game runtime: archetypal ECS, tick loop, async task pool, and actor lifecycle"

[dependencies]
smol        = { workspace = true }
profiling   = { workspace = true }
tracing     = { workspace = true }

# Fast hasher — avoids DoS-resistant hashing overhead for internal tables
ahash       = "0.8"
# Stable, fast type-name/id utilities
once_cell   = "1"

# Blueprint runtime dependencies
pulsar_graph = { path = "../pulsar_graph" }
blueprint_compiler = { path = "../blueprint_compiler" }
pulsar_bp_executor = { path = "../pulsar_bp_executor" }
pulsar_std_bundle = { path = "../pulsar_std_bundle" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
notify = "6"

[lints]
workspace = true
