[package]
name = "pulsar_game"
version = "0.1.0"
edition = "2021"
description = "Pulsar game runtime: archetypal ECS, tick loop, async task pool, and actor lifecycle"

[dependencies]
smol        = { workspace = true }
profiling   = { workspace = true }
tracing     = { workspace = true }

# Fast hasher — avoids DoS-resistant hashing overhead for internal tables
ahash       = "0.8"
# Stable, fast type-name/id utilities
once_cell   = { workspace = true }

# Blueprint runtime dependencies
pulsar_graph = { workspace = true }
blueprint_compiler = { workspace = true }
pulsar_bp_executor = { workspace = true }
pulsar_std_bundle = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
notify = { workspace = true }

# Reflection — for ComponentStore property access
pulsar_reflection = { workspace = true }

# Windowed rendering (Helio + winit + wgpu)
helio   = { workspace = true }
winit   = { workspace = true }
wgpu    = { workspace = true }
glam    = { workspace = true }
pollster = "0.3"

# Scene loading + settings
pulsar_scene    = { workspace = true }
engine_state    = { workspace = true }
pulsar_settings = { workspace = true }

[lints]
workspace = true
