[package]
name = "pulsar_graph"
version = "0.1.0"
edition = "2021"
description = "Blueprint graph data model for Pulsar (BlueprintAsset, GraphDescription, type system)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
pulsar_reflection = { workspace = true, optional = true }

[features]
default = ["reflection"]
reflection = ["pulsar_reflection"]
