[package]
name = "pulsar_reflection"
version = "0.1.0"
edition = "2024"

[features]
default = ["prims-core", "prims-std", "prims-glam", "prims-helio"]
prims-core = []
prims-std = ["prims-core"]
prims-serde = ["prims-std"]
prims-glam = ["prims-core", "dep:glam"]
prims-helio = ["prims-core", "dep:helio"]
ui-editors = ["dep:gpui-ce"]

[dependencies]
inventory = "0.3"
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
pulsar_reflection_derive = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
dashmap = { workspace = true }
glam = { workspace = true, features = ["serde"], optional = true }
helio = { workspace = true, optional = true }
gpui-ce = { workspace = true, optional = true }

[lints]
workspace = true
