[package]
name = "pulsar_render"
version = "0.1.0"
edition = "2021"
description = "Renderer abstraction trait and shared types for the Pulsar engine"
publish = false

[lints]
workspace = true

[features]
default = ["helio"]
helio = []       # Helio/D3D12 backend (Windows)
headless = []    # CPU/software renderer for testing

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_Security",
] }
